<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_illustration"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="@dimen/dp_60"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty_state" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_header"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/empty_header"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_illustration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/empty_desc"
        android:textColor="@color/black_80"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_button"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:background="?selectableItemBackground"
        android:drawablePadding="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/add_article_source"
        android:textAllCaps="false"
        android:textColor="@color/green_60"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_reader_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />


</androidx.constraintlayout.widget.ConstraintLayout>